making the directors' pictures responsive

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -56,7 +56,7 @@ a.navbar-item.activeD{
   color: #f44336;
 }
 a.navbar-item.activeH{
-  color: #f44336;
+  color: gold;
 }
 
 a.navbar-item.activeF{
@@ -109,6 +109,9 @@ body{
 }
 p{
   color: white;
+}
+h5{
+  color: black;
 }
 .button.is-danger.is-outlined {
     background-color: transparent;
