--- a/views/directors/new.ejs
+++ b/views/directors/new.ejs
@@ -21,15 +21,15 @@
       </div>
     </div>
     <div class="field">
-      <label class="label">Synopsis</label>
-      <div class="control">
-        <input class="input" name="synopsis" type="text" placeholder="Director summary" required>
-      </div>
-    </div>
-    <div class="field">
       <label class="label">Image</label>
       <div class="control">
         <input class="input" name="image" type="text" placeholder="Image" required>
+      </div>
+    </div>
+    <div class="field">
+      <label class="label">Synopsis</label>
+      <div class="control">
+        <textarea class="textarea" name="synopsis" type="text" placeholder="Director summary" required></textarea>
       </div>
     </div>
     <div class="control">
