--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -4,7 +4,7 @@
         <strong>Best Movies</strong> by <a href="http://giovannigaliero.co.uk/" target="_blank">Giovanni Galiero</a>
       </div>
       <div class="column has-text-centered">
-        <p>Made with <i class="fa fa-heartbeat"></i> at <a href="https://generalassemb.ly/locations/london" target="_blank">GA</a> WDI 29</p>
+        <p>Made with <i class="fa fa-heartbeat"></i> at <a href="https://generalassemb.ly/locations/london" target="_blank">GA</a> WDI #29</p>
       </div>
       <div class="column has-text-centered">
         <a class="icon" href="https://github.com/Gio85" target="_blank">
