--- a/views/directors/index.ejs
+++ b/views/directors/index.ejs
@@ -1,12 +1,17 @@
 <h1 class="title is-1">Directors</h1>
-<ul class="columns is-multiline">
+<div class="columns is-multiline">
   <% directors.forEach(director => { %>
-    <li class="column is-one-third">
-      <div class="box">
-        <a href="<%= director.wiki %>" target="_blank"><h2 class="title is-2"><%= director.name %></h2>
-          <img src="<%= director.image %>" alt="<%= director.name %>"></a><p><%= director.synopsis %></p>
-        <p><%= director.country %></p>
-      </div>
+    <div class="column is-one-quarter-desktop is-half-tablet">
+      <a href="<%= director.wiki %>" target="_blank">
+        <div class="card">
+          <div class="card-image" style="background-image: url(<%= director.image %>)"></div>
+          <div class="card-content">
+            <h3 class="title"><%= director.name %></h3>
+            <h5><%= director.country %></h5>
+            <h5><%= director.synopsis %></h5>
+          </div>
+        </div>
+      </a>
     <% if(locals.isAuthenticated) { %>
       <a class="button is-primary is-outlined" href="/directors/<%= director.id %>/edit">
       <span class="icon is-small">
@@ -23,6 +28,6 @@
         </span></button>
       </form>
     <% } %>
-    </li>
+    </div>
   <% }) %>
 </ul>
