--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -1,7 +1,6 @@
 <div class="container">
-  <h3 class="title"><%= user.username %></h3>
+  <h3 class="title"><%= user.username %>'s Favorites Movies</h3>
   <br>
-  <h4 class="title">Favorites Movies</h4>
   <div class="columns is-multiline">
     <% user.favorites.forEach(movie => { %>
       <div class="column is-one-quarter-desktop is-half-tablet">
